--- a/weibo/weibo.html
+++ b/weibo/weibo.html
@@ -5,7 +5,7 @@
 <title>微博发布jq版</title>
 <meta name="Keywords" content="">
 <meta name="author" content="@my_programmer">
-<script src="http://code.jquery.com/jquery-1.8.0.min.js" type="text/javascript"></script>
+<script src="js/jquery-1.12.4.js" type="text/javascript"></script>
 <style type="text/css">
 /*重置{*/
 html{color:#000;background:#fff;}
